tests/req055/kuadrant/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: req55-gateway
  labels:
    app.kubernetes.io/part-of: rhcl-req55-tls
---
apiVersion: v1
kind: Namespace
metadata:
  name: req55-api
  labels:
    app.kubernetes.io/part-of: rhcl-req55-tls
